--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Ilseon</string>
+    <string name="priority_widget_description">Displays the current priority task.</string>
 </resources>
